<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffd600"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="302dp"
        android:src="@drawable/label1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="54dp"
        android:fontFamily="cursive"
        android:paddingLeft="20dp"
        android:paddingTop="08dp"
        android:text="@string/wafflez"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:text="@string/add_details1"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:text="@string/add_details2"
        android:textSize="20sp" />

    <TextView
        android:layout_width="136dp"
        android:layout_height="33dp"
        android:paddingLeft="20dp"
        android:text="@string/add_details3"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:text="@string/contact"
        android:textSize="20sp" />


</LinearLayout>

